

=== Counterclockwise embedded nREPL

Counterclockwise ships with an embedded nREPL server. The following enhancements have been applied:

- Command line options: `-Dccw.nrepl.port=[1-65535]` allows to select the embedded nrepl port. `ccw.autostartrepl` has been renamed to `ccw.nrepl.autostart` for coherence.
- Uses the cider-nrepl middleware instead of the bare default middleware.

=== User Plugins

- The keybinding cleaning function did concurrent modifications of an Eclipse Internal collection. Fix laurentpetit/ccw-plugin-manager#1

== Changes between Counterclockwise 0.31.2 and 0.32.0

`0.32.0` released on December xx, 2014

Internal Refactoring: merge of the Eclipse 4 code into the main Counterclockwise Plugin.

From now on, Counterclockwise drops Eclipse 3.x support, and only supports Eclipse 4.

Internally, Counterclockwise now uses Clojure 1.7.0-master. It adds a couple patches to it, waiting for the relevant JIRA tickets to be applied mainstream.

=== Fix

- New Clojure Project Wizard honors the 'use previous location' checkbox. Fixes #682
- Better support for clojure extension files: `cljs`, `cljx`, `clja`, `cljc`

=== Documentation
- Add a mention about keyboard binding for switching between default and strict editing modes ( kbd:[Alt+D] ). Fixes #346


=== Leiningen Support
- Embedded Leiningen version upgraded from version 2.5.0 to 2.5.1


=== Enhancements

- Print maven coordinates of Counterclockwise dependencies at plugin startup in `.metadata/.log`. Fixes #741

== Changes between Counterclockwise 0.31.1 and 0.31.2

`0.31.2` released on December 4, 2014

=== User Plugins

- Added namespace `ccw.api.markers` for managing resource markers. Resource markers typically appear in the editor margins (error markers, warning markers, tasks, bookmarks, etc.), and in their respective problem views, task views, bookmark views, etc.
